cabal-version: 3.0
name:          aeson-unqualified
version:       0
author:        Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:    Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:     (c) 2023 Nikita Volkov
license:       MIT
license-file:  LICENSE
synopsis:      Aliases to "aeson" AST making it importable unqualified
description:
  Reasonable type aliases and patterns for the AST definitions of \"aeson\",
  which unlike the original are unlikely to cause any conflicts when imported unqualified.
  As such the definitions from this package are safe to reexport from custom preludes.
  .
  The package provides a "Json" type alias and pattern synonyms,
  which are both descriptive and unambiguous, unlike the ones in the \"aeson\" package.

common language-settings
  default-language:   Haskell2010
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:          language-settings
  hs-source-dirs:  library
  exposed-modules: AesonUnqualified
  build-depends:
    , aeson >=2 && <3
    , base >=4.5 && <5
    , scientific >=0.3.7.0 && <0.4
    , text >=1.2.3.0 && <1.3 || >=2.0 && <2.2
    , vector >=0.13 && <0.14
